# pattern-matching-paper

./: 00_example.md  00_index.md  01_Introduction.md  01_introduction.md  02_materials.md  03_data.md  03_data_collection.md  03_methods.md  04_data_processing.md  04_results_model_system.md  04_templates.md  05_matching.md  05_results_test_system.md  05_templates.md  06_conclusion.md  06_matching.md  06_results_model_system.md  07_results_model_system.md  07_results_test_system.md  08_results_test_system.md  09_conclusion.md  Dockerfile  index.md  myst.yml  pm-env.yml  pm-paper-env.yml  pyproject.toml  refs.bib  requirements.txt
notebooks/: 00.example_notebook.ipynb  advanced_phase_map.ipynb  ground_truth_comparison.ipynb  nmf_components.ipynb  preprocessing.ipynb
notebooks/data/: 2xxx_selected_patterns.hspy  2xxx_selected_patterns_tmds.hspy  diff_nmf.hspy  diff_nmf_p.hspy  diff_sel.hspy  diff_sel_p.hspy  diff_sim.hspy  diff_sim_p.hspy  diffs.npy  ground_truth.hspy  ground_truth.npy  nccmax_nmf.hspy  nccmax_nmf_overlap.hspy  nccmax_nmf_overlap_clustering.hspy  nccmax_nmf_overlap_nmf.hspy  nmf_01_factors.hspy  nmf_01_loadings.hspy  nmf_02_factors.hspy  nmf_02_loadings.hspy  nmf_03_factors.hspy  nmf_03_loadings.hspy  nmf_04_factors.hspy  nmf_04_loadings.hspy  nmf_05_factors.hspy  nmf_05_loadings.hspy  nmf_06_factors.hspy  nmf_06_loadings.hspy  nmf_07_factors.hspy  nmf_07_loadings.hspy  nmf_08_factors.hspy  nmf_08_loadings.hspy  nmf_09_factors.hspy  nmf_09_loadings.hspy  nmf_10_factors.hspy  nmf_10_loadings.hspy  nmf_11_factors.hspy  nmf_11_loadings.hspy  (+36 more)
