[project]
name = "pattern-matching-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scikit-image>=0.26.0",
]
